# AlkCalc

./: .gitignore  Makefile  READMEeng.txt  READMEger.txt  quick  quick.c  quick.sh
LANCZOS/: Makefile  README.txt
LANCZOS.D/: LICENSE.txt  Makefile
LANCZOS.D/SRC.D/: DSAITR.F  DSAUP2.F  DSAUPD.F  DSCONV.F  DSTATS.F
LANCZOS/SRC/: DGETV0.F  DSAPPS.F  DSEIGT.F  DSEUPD.F  DSGETS.F  ICB.F  README.txt
LANCZOS/inc/: README.txt  lanczos.h
LANCZOS/lib/: README.txt
LUFac/: Makefile  README.txt
LUFac.d/: Makefile
LUFac.d/inc.d/: README.txt  slu_ddefs.h
LUFac.d/obj.d/: README.txt
LUFac.d/src.d/: README.txt  colamd.c  dcolumn_bmod.c  dcolumn_dfs.c  dcopy_to_ucol.c  dgssv.c  dgstrf.c  dgstrs.c  dmemory.c  dpanel_bmod.c  dpanel_dfs.c  dpivotL.c  dpruneL.c  dsnode_bmod.c  dsnode_dfs.c  dsp_blas2.c  dsp_blas3.c  dutil.c  get_perm_c.c  heap_relax_snode.c  input_error.c  memory.c  mmd.c  relax_snode.c  sp_coletree.c  sp_ienv.c  sp_preorder.c  util.c
LUFac/inc/: superlu_config.h
LUFac/lib/: README.txt
LUFac/src/: colamd.c  dcolumn_bmod.c  dcolumn_dfs.c  dcopy_to_ucol.c  dgssv.c  dgstrf.c  dgstrs.c  dmemory.c  dpanel_bmod.c  dpanel_dfs.c  dpivotL.c  dpruneL.c  dsnode_bmod.c  dsnode_dfs.c  dsp_blas2.c  dsp_blas3.c  dutil.c  get_perm_c.c  heap_relax_snode.c  input_error.c  memory.c  mmd.c  relax_snode.c  sp_coletree.c  sp_ienv.c  sp_preorder.c  util.c
PyAlkCalc/: .gitignore  README.txt  READMEeng.txt  pyproject.toml  setup.py
PyAlkCalc/src/PyAlkCalc/: __init__.py  _alkcalc.pxd  _alkcalc.pyx
PyAlkCalc/src/pyalkcalc/: README.txt
PyAlkCalc/tests/: README.txt
data/: README.txt
examples/: README.txt  clebsch_gordan.c  coupled_basis.c  eigenenergies.c  lifetimes.c  oscillator_strengths.c  radial_matrix_element.c  uncoupled_basis.c
examples.d/: README.txt  clebsch_gordan.c  coupled_basis.c  eigenenergies.c  lifetimes.c  oscillator_strengths.c  radial_matrix_element.c  uncoupled_basis.c
inc/: eigensolver.h
inc.d/: README.txt  eigensolver.h
interface/: README.txt  alkcalc.h  settings.c  settings.h
interface.d/: alkcalc.h  settings.c  settings.h
lib/: README.txt
pyalkcalc/: .gitignore  README.md  pyproject.toml  setup.py
pyalkcalc/src/pyalkcalc/: __init__.py  _core.c  _core.pxd  _core.pyx  api.py  tools.py
pyalkcalc/tests/: test_api.py
src/: alkcalc.c  eigensolver.c  potential.c
src.d/: alkcalc.c  eigensolver.c  potential.c
theory/: bib.sty  theory.tex
theory.d/: README.txt  bib.sty  references.bib  sdoc.sty  theory.tex
tmp.d/: README.txt
