################################################################################
### Package configuration file                                               ###
###                                                                          ###
### Author of this file: Simon Euchner                                       ###
################################################################################

[build-system]
requires = ["setuptools", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAlkCalc"
version = "1.0"
requires-python = ">=3.8"
description = "Python interface for AlkCalc"
authors = [{name = "Simon Euchner"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
